chore: changed path to my github

--- a/src/components/Footer/Footer.astro
+++ b/src/components/Footer/Footer.astro
@@ -1,6 +1,6 @@
 ---
-import { urlFromBase } from "@/lib/utils";
 import { frontmatter as Selfie } from "#/selfie.md";
+import { urlFromBase } from "@/lib/utils";
 
 const base = import.meta.env.BASE_URL;
 ---
@@ -13,7 +13,7 @@ const base = import.meta.env.BASE_URL;
   </div>
   <a
     class="underline whitespace-nowrap"
-    href="https://github.com/humbornjo/nobloger"
+    href="https://github.com/mattormianek/nobloger"
   >
     nobloger
   </a>
